# ask

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ask/: __main__.py  cli.py  gff.py  llm.py  resources.py  sandbox.py
src/ask/data/: encode_re2g_catalog.tsv
src/ask/prompts/: system.md
src/canopy/: __init__.py  __main__.py  cli.py  gff.py  llm.py  resources.py  sandbox.py
src/canopy/prompts/: system.md
src/genogrove_ask/: __init__.py  __main__.py  cli.py  llm.py  registry.py  resources.py  sandbox.py
src/genogrove_ask/prompts/: system.md
tests/: test_cli.py  test_gff.py  test_llm.py  test_load_grove.py  test_region.py  test_registry_pins.py  test_resources.py  test_resources_pins.py  test_sandbox.py  test_sandbox_pygenogrove.py
tools/: build_re2g_grove.py  fetch_re2g_catalog.py  gen_fantom_enhancer_gene_links.py  measure_gg.py
