[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genogrove-ask"
version = "0.1.0"
description = "Natural-language interface for genogrove — ask plain-English questions over connected genomic intervals, powered by pygenogrove."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    { name = "Richard A. Schaefer", email = "richard.schaefer@northwestern.edu" },
    { name = "Rendong Yang", email = "rendong.yang@northwestern.edu" },
]
keywords = ["genomics", "bioinformatics", "intervals", "llm", "natural-language", "pygenogrove"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Runtime dependencies. The dependency direction is strictly one-way:
# genogrove-ask depends on pygenogrove; pygenogrove never references this package.
dependencies = [
    "anthropic>=0.92",
    # Pinned for Level 2 reproducibility; the exact build (commit) is pinned in
    # [tool.uv.sources] below and mirrored in ask.resources.
    "pygenogrove==0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
# Standalone entry point. The paper's `genogrove ask <question>` surface is a thin
# alias over this command (see README → "The `genogrove ask` surface").
genogrove-ask = "ask.cli:main"

[project.urls]
Homepage = "https://github.com/genogrove/ask"
Repository = "https://github.com/genogrove/ask"
Issues = "https://github.com/genogrove/ask/issues"

# pygenogrove is not yet published to PyPI; resolve it from its GitHub repo.
# Pinning an immutable commit here is part of the Level 2 reproducibility commitment
# (a tag can be moved; a commit SHA cannot). rev below is tag v0.6.2.
[tool.uv.sources]
pygenogrove = { git = "https://github.com/genogrove/pygenogrove", rev = "56602a4aef8059cd4bf31d34ac80e5a868c0a122" }

[tool.hatch.build.targets.wheel]
packages = ["src/ask"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
